; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_do_kill.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_do_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.track* }
%struct.track = type { i32 }

@MPV_ERROR_VO_INIT_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @do_kill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_kill(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca %struct.track*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.MPContext*
  store %struct.MPContext* %6, %struct.MPContext** %3, align 8
  %7 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %8 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = icmp ne %struct.TYPE_2__* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %13 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load %struct.track*, %struct.track** %15, align 8
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %11
  %19 = phi %struct.track* [ %16, %11 ], [ null, %17 ]
  store %struct.track* %19, %struct.track** %4, align 8
  %20 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %21 = call i32 @uninit_video_out(%struct.MPContext* %20)
  %22 = load %struct.track*, %struct.track** %4, align 8
  %23 = icmp ne %struct.track* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %18
  %25 = load i32, i32* @MPV_ERROR_VO_INIT_FAILED, align 4
  %26 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %27 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  %28 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %29 = load %struct.track*, %struct.track** %4, align 8
  %30 = call i32 @error_on_track(%struct.MPContext* %28, %struct.track* %29)
  br label %31

31:                                               ; preds = %24, %18
  ret void
}

declare dso_local i32 @uninit_video_out(%struct.MPContext*) #1

declare dso_local i32 @error_on_track(%struct.MPContext*, %struct.track*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
